app/pseudocode-parser/PseudocodeParser.js
// Generated from Pseudocode.g4 by ANTLR 4.6
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PseudocodeVisitor = require('./PseudocodeVisitor').PseudocodeVisitor;

var grammarFileName = "Pseudocode.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'abort'", "'skip'", "'if'", "'fi'", "'do'", 
                     "'od'", "'|'", "'->'", "':='", "','", "'('", "')'", 
                     "'*'", "'&&'", "'||'", "'<'", "'>'", "'<='", "'>='", 
                     "'='", "'<>'", "'['", "']'", "'~'", "'-'", "'+'", "'T'", 
                     "'F'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "NEGATION", 
                      "MINUS", "PLUS", "TRUE", "FALSE", "NAME", "INT", "WS" ];

var ruleNames =  [ "program", "statements", "statement", "guarded_commands", 
                   "guarded_command", "assignment", "int_expr", "bool_expr", 
                   "comparison_op", "variable", "selectors", "selector" ];

function PseudocodeParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PseudocodeParser.prototype = Object.create(antlr4.Parser.prototype);
PseudocodeParser.prototype.constructor = PseudocodeParser;

Object.defineProperty(PseudocodeParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PseudocodeParser.EOF = antlr4.Token.EOF;
PseudocodeParser.T__0 = 1;
PseudocodeParser.T__1 = 2;
PseudocodeParser.T__2 = 3;
PseudocodeParser.T__3 = 4;
PseudocodeParser.T__4 = 5;
PseudocodeParser.T__5 = 6;
PseudocodeParser.T__6 = 7;
PseudocodeParser.T__7 = 8;
PseudocodeParser.T__8 = 9;
PseudocodeParser.T__9 = 10;
PseudocodeParser.T__10 = 11;
PseudocodeParser.T__11 = 12;
PseudocodeParser.T__12 = 13;
PseudocodeParser.T__13 = 14;
PseudocodeParser.T__14 = 15;
PseudocodeParser.T__15 = 16;
PseudocodeParser.T__16 = 17;
PseudocodeParser.T__17 = 18;
PseudocodeParser.T__18 = 19;
PseudocodeParser.T__19 = 20;
PseudocodeParser.T__20 = 21;
PseudocodeParser.T__21 = 22;
PseudocodeParser.T__22 = 23;
PseudocodeParser.T__23 = 24;
PseudocodeParser.NEGATION = 25;
PseudocodeParser.MINUS = 26;
PseudocodeParser.PLUS = 27;
PseudocodeParser.TRUE = 28;
PseudocodeParser.FALSE = 29;
PseudocodeParser.NAME = 30;
PseudocodeParser.INT = 31;
PseudocodeParser.WS = 32;

PseudocodeParser.RULE_program = 0;
PseudocodeParser.RULE_statements = 1;
PseudocodeParser.RULE_statement = 2;
PseudocodeParser.RULE_guarded_commands = 3;
PseudocodeParser.RULE_guarded_command = 4;
PseudocodeParser.RULE_assignment = 5;
PseudocodeParser.RULE_int_expr = 6;
PseudocodeParser.RULE_bool_expr = 7;
PseudocodeParser.RULE_comparison_op = 8;
PseudocodeParser.RULE_variable = 9;
PseudocodeParser.RULE_selectors = 10;
PseudocodeParser.RULE_selector = 11;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PseudocodeParser.ProgramContext = ProgramContext;

PseudocodeParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PseudocodeParser.RULE_program);
    try {
        this.state = 26;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PseudocodeParser.EOF:
            this.enterOuterAlt(localctx, 1);

            break;
        case PseudocodeParser.T__1:
        case PseudocodeParser.T__2:
        case PseudocodeParser.T__3:
        case PseudocodeParser.T__5:
        case PseudocodeParser.NAME:
            this.enterOuterAlt(localctx, 2);
            this.state = 25;
            this.statements();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_statements;
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitStatements(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PseudocodeParser.StatementsContext = StatementsContext;

PseudocodeParser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PseudocodeParser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 28;
        this.statement();
        this.state = 33;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PseudocodeParser.T__0) {
            this.state = 29;
            this.match(PseudocodeParser.T__0);
            this.state = 30;
            this.statement();
            this.state = 35;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;


 
StatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function AbortContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AbortContext.prototype = Object.create(StatementContext.prototype);
AbortContext.prototype.constructor = AbortContext;

PseudocodeParser.AbortContext = AbortContext;

AbortContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitAbort(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function If_statementContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

If_statementContext.prototype = Object.create(StatementContext.prototype);
If_statementContext.prototype.constructor = If_statementContext;

PseudocodeParser.If_statementContext = If_statementContext;

If_statementContext.prototype.guarded_commands = function() {
    return this.getTypedRuleContext(Guarded_commandsContext,0);
};
If_statementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitIf_statement(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function SkipContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SkipContext.prototype = Object.create(StatementContext.prototype);
SkipContext.prototype.constructor = SkipContext;

PseudocodeParser.SkipContext = SkipContext;

SkipContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitSkip(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Assignment_statementContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Assignment_statementContext.prototype = Object.create(StatementContext.prototype);
Assignment_statementContext.prototype.constructor = Assignment_statementContext;

PseudocodeParser.Assignment_statementContext = Assignment_statementContext;

Assignment_statementContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};
Assignment_statementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitAssignment_statement(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Do_statementContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Do_statementContext.prototype = Object.create(StatementContext.prototype);
Do_statementContext.prototype.constructor = Do_statementContext;

PseudocodeParser.Do_statementContext = Do_statementContext;

Do_statementContext.prototype.guarded_commands = function() {
    return this.getTypedRuleContext(Guarded_commandsContext,0);
};
Do_statementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitDo_statement(this);
    } else {
        return visitor.visitChildren(this);
    }
};



PseudocodeParser.StatementContext = StatementContext;

PseudocodeParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PseudocodeParser.RULE_statement);
    try {
        this.state = 47;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PseudocodeParser.T__1:
            localctx = new AbortContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 36;
            this.match(PseudocodeParser.T__1);
            break;
        case PseudocodeParser.T__2:
            localctx = new SkipContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 37;
            this.match(PseudocodeParser.T__2);
            break;
        case PseudocodeParser.NAME:
            localctx = new Assignment_statementContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 38;
            this.assignment();
            break;
        case PseudocodeParser.T__3:
            localctx = new If_statementContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 39;
            this.match(PseudocodeParser.T__3);
            this.state = 40;
            this.guarded_commands();
            this.state = 41;
            this.match(PseudocodeParser.T__4);
            break;
        case PseudocodeParser.T__5:
            localctx = new Do_statementContext(this, localctx);
            this.enterOuterAlt(localctx, 5);
            this.state = 43;
            this.match(PseudocodeParser.T__5);
            this.state = 44;
            this.guarded_commands();
            this.state = 45;
            this.match(PseudocodeParser.T__6);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Guarded_commandsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_guarded_commands;
    return this;
}

Guarded_commandsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Guarded_commandsContext.prototype.constructor = Guarded_commandsContext;

Guarded_commandsContext.prototype.guarded_command = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Guarded_commandContext);
    } else {
        return this.getTypedRuleContext(Guarded_commandContext,i);
    }
};

Guarded_commandsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitGuarded_commands(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PseudocodeParser.Guarded_commandsContext = Guarded_commandsContext;

PseudocodeParser.prototype.guarded_commands = function() {

    var localctx = new Guarded_commandsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, PseudocodeParser.RULE_guarded_commands);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 49;
        this.guarded_command();
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PseudocodeParser.T__7) {
            this.state = 50;
            this.match(PseudocodeParser.T__7);
            this.state = 51;
            this.guarded_command();
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Guarded_commandContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_guarded_command;
    return this;
}

Guarded_commandContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Guarded_commandContext.prototype.constructor = Guarded_commandContext;

Guarded_commandContext.prototype.bool_expr = function() {
    return this.getTypedRuleContext(Bool_exprContext,0);
};

Guarded_commandContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

Guarded_commandContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitGuarded_command(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PseudocodeParser.Guarded_commandContext = Guarded_commandContext;

PseudocodeParser.prototype.guarded_command = function() {

    var localctx = new Guarded_commandContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, PseudocodeParser.RULE_guarded_command);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 57;
        this.bool_expr(0);
        this.state = 58;
        this.match(PseudocodeParser.T__8);
        this.state = 59;
        this.statements();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_assignment;
    return this;
}

AssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentContext.prototype.constructor = AssignmentContext;


 
AssignmentContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function Scalar_assignmentContext(parser, ctx) {
	AssignmentContext.call(this, parser);
    AssignmentContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Scalar_assignmentContext.prototype = Object.create(AssignmentContext.prototype);
Scalar_assignmentContext.prototype.constructor = Scalar_assignmentContext;

PseudocodeParser.Scalar_assignmentContext = Scalar_assignmentContext;

Scalar_assignmentContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

Scalar_assignmentContext.prototype.int_expr = function() {
    return this.getTypedRuleContext(Int_exprContext,0);
};
Scalar_assignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitScalar_assignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Vector_assignmentContext(parser, ctx) {
	AssignmentContext.call(this, parser);
    AssignmentContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Vector_assignmentContext.prototype = Object.create(AssignmentContext.prototype);
Vector_assignmentContext.prototype.constructor = Vector_assignmentContext;

PseudocodeParser.Vector_assignmentContext = Vector_assignmentContext;

Vector_assignmentContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

Vector_assignmentContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

Vector_assignmentContext.prototype.int_expr = function() {
    return this.getTypedRuleContext(Int_exprContext,0);
};
Vector_assignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitVector_assignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};



PseudocodeParser.AssignmentContext = AssignmentContext;

PseudocodeParser.prototype.assignment = function() {

    var localctx = new AssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, PseudocodeParser.RULE_assignment);
    try {
        this.state = 71;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            localctx = new Scalar_assignmentContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 61;
            this.variable();
            this.state = 62;
            this.match(PseudocodeParser.T__9);
            this.state = 63;
            this.int_expr(0);
            break;

        case 2:
            localctx = new Vector_assignmentContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 65;
            this.variable();
            this.state = 66;
            this.match(PseudocodeParser.T__10);
            this.state = 67;
            this.assignment();
            this.state = 68;
            this.match(PseudocodeParser.T__10);
            this.state = 69;
            this.int_expr(0);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Int_exprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_int_expr;
    return this;
}

Int_exprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Int_exprContext.prototype.constructor = Int_exprContext;


 
Int_exprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function Paret_int_exprContext(parser, ctx) {
	Int_exprContext.call(this, parser);
    Int_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Paret_int_exprContext.prototype = Object.create(Int_exprContext.prototype);
Paret_int_exprContext.prototype.constructor = Paret_int_exprContext;

PseudocodeParser.Paret_int_exprContext = Paret_int_exprContext;

Paret_int_exprContext.prototype.int_expr = function() {
    return this.getTypedRuleContext(Int_exprContext,0);
};

Paret_int_exprContext.prototype.MINUS = function() {
    return this.getToken(PseudocodeParser.MINUS, 0);
};
Paret_int_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitParet_int_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Add_exprContext(parser, ctx) {
	Int_exprContext.call(this, parser);
    Int_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Add_exprContext.prototype = Object.create(Int_exprContext.prototype);
Add_exprContext.prototype.constructor = Add_exprContext;

PseudocodeParser.Add_exprContext = Add_exprContext;

Add_exprContext.prototype.int_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Int_exprContext);
    } else {
        return this.getTypedRuleContext(Int_exprContext,i);
    }
};

Add_exprContext.prototype.PLUS = function() {
    return this.getToken(PseudocodeParser.PLUS, 0);
};

Add_exprContext.prototype.MINUS = function() {
    return this.getToken(PseudocodeParser.MINUS, 0);
};
Add_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitAdd_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Variable_exprContext(parser, ctx) {
	Int_exprContext.call(this, parser);
    Int_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Variable_exprContext.prototype = Object.create(Int_exprContext.prototype);
Variable_exprContext.prototype.constructor = Variable_exprContext;

PseudocodeParser.Variable_exprContext = Variable_exprContext;

Variable_exprContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

Variable_exprContext.prototype.MINUS = function() {
    return this.getToken(PseudocodeParser.MINUS, 0);
};
Variable_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitVariable_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Int_const_exprContext(parser, ctx) {
	Int_exprContext.call(this, parser);
    Int_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Int_const_exprContext.prototype = Object.create(Int_exprContext.prototype);
Int_const_exprContext.prototype.constructor = Int_const_exprContext;

PseudocodeParser.Int_const_exprContext = Int_const_exprContext;

Int_const_exprContext.prototype.INT = function() {
    return this.getToken(PseudocodeParser.INT, 0);
};

Int_const_exprContext.prototype.MINUS = function() {
    return this.getToken(PseudocodeParser.MINUS, 0);
};
Int_const_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitInt_const_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Mult_exprContext(parser, ctx) {
	Int_exprContext.call(this, parser);
    Int_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Mult_exprContext.prototype = Object.create(Int_exprContext.prototype);
Mult_exprContext.prototype.constructor = Mult_exprContext;

PseudocodeParser.Mult_exprContext = Mult_exprContext;

Mult_exprContext.prototype.int_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Int_exprContext);
    } else {
        return this.getTypedRuleContext(Int_exprContext,i);
    }
};
Mult_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitMult_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



PseudocodeParser.prototype.int_expr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new Int_exprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 12;
    this.enterRecursionRule(localctx, 12, PseudocodeParser.RULE_int_expr, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 89;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            localctx = new Int_const_exprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 75;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===PseudocodeParser.MINUS) {
                this.state = 74;
                this.match(PseudocodeParser.MINUS);
            }

            this.state = 77;
            this.match(PseudocodeParser.INT);
            break;

        case 2:
            localctx = new Variable_exprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 79;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===PseudocodeParser.MINUS) {
                this.state = 78;
                this.match(PseudocodeParser.MINUS);
            }

            this.state = 81;
            this.variable();
            break;

        case 3:
            localctx = new Paret_int_exprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===PseudocodeParser.MINUS) {
                this.state = 82;
                this.match(PseudocodeParser.MINUS);
            }

            this.state = 85;
            this.match(PseudocodeParser.T__11);
            this.state = 86;
            this.int_expr(0);
            this.state = 87;
            this.match(PseudocodeParser.T__12);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 99;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 97;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new Mult_exprContext(this, new Int_exprContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PseudocodeParser.RULE_int_expr);
                    this.state = 91;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 92;
                    this.match(PseudocodeParser.T__13);
                    this.state = 93;
                    this.int_expr(3);
                    break;

                case 2:
                    localctx = new Add_exprContext(this, new Int_exprContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, PseudocodeParser.RULE_int_expr);
                    this.state = 94;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 95;
                    _la = this._input.LA(1);
                    if(!(_la===PseudocodeParser.MINUS || _la===PseudocodeParser.PLUS)) {
                    this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 96;
                    this.int_expr(2);
                    break;

                } 
            }
            this.state = 101;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function Bool_exprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PseudocodeParser.RULE_bool_expr;
    return this;
}

Bool_exprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Bool_exprContext.prototype.constructor = Bool_exprContext;


 
Bool_exprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function Bool_const_exprContext(parser, ctx) {
	Bool_exprContext.call(this, parser);
    Bool_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Bool_const_exprContext.prototype = Object.create(Bool_exprContext.prototype);
Bool_const_exprContext.prototype.constructor = Bool_const_exprContext;

PseudocodeParser.Bool_const_exprContext = Bool_const_exprContext;

Bool_const_exprContext.prototype.TRUE = function() {
    return this.getToken(PseudocodeParser.TRUE, 0);
};

Bool_const_exprContext.prototype.FALSE = function() {
    return this.getToken(PseudocodeParser.FALSE, 0);
};

Bool_const_exprContext.prototype.NEGATION = function() {
    return this.getToken(PseudocodeParser.NEGATION, 0);
};
Bool_const_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitBool_const_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function And_exprContext(parser, ctx) {
	Bool_exprContext.call(this, parser);
    Bool_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

And_exprContext.prototype = Object.create(Bool_exprContext.prototype);
And_exprContext.prototype.constructor = And_exprContext;

PseudocodeParser.And_exprContext = And_exprContext;

And_exprContext.prototype.bool_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Bool_exprContext);
    } else {
        return this.getTypedRuleContext(Bool_exprContext,i);
    }
};
And_exprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PseudocodeVisitor ) {
        return visitor.visitAnd_expr(this);
    } else {
        return visitor.visitChildren(this);
    }
};

